pbc_contract_codegen/tests/action/fail/bad_arg_pattern_literal.stderr
error: custom attribute panicked
 --> tests/action/fail/bad_arg_pattern_literal.rs:6:1
  |
6 | #[action]
  | ^^^^^^^^^
  |
  = help: message: Unsupported argument pattern: 5
